--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -113,7 +113,7 @@
     </thead>
   </table>
   <div class="ui centered grid">
-    <button class="ui mini primary button">สรุปแสตป์รายปีงบประมาณ</button>
+    <a class="ui mini primary button" routerLink="/int05/1/1/2">สรุปแสตป์รายปีงบประมาณ</a>
     <button class="ui mini primary button"> Export</button>
     <button class="ui mini primary button"> พิมพ์รายงานตัดปีแสตมป์</button>
   </div><br>
