--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -53,7 +53,7 @@
             <div class="ui dropdown item " *ngIf="authService.renderByPage('int01')">
                 <i class="dropdown icon "></i> ตรวจสอบรายได้
                 <div class="menu ">
-                    <a class="item " [routerLink]="[ '/int01/1/1'] " *ngIf="authService.renderByPage('int01/1/1')" routerLinkActive="active " style=" color:White ">สร้างกระดาษทำการภาษีสรรพสามิต</a>
+                    <a class="item " [routerLink]="[ '/int01/1/1'] " *ngIf="authService.renderByPage('int01/1/1')" routerLinkActive="active " style=" color:White ">ตรวจสอบใบเสร็จรับเงินภาษีสรรพสามิต</a>
                     <a class="item " [routerLink]="[ '/int01/2/1'] " *ngIf="authService.renderByPage('int01/2/1')" routerLinkActive="active " style=" color:White ">สร้างกระดาษทำการใบอนุญาต สุรา ยาสูบ ไพ่</a>
                     <a class="item " [routerLink]="[ '/int01/3/1'] " *ngIf="authService.renderByPage('int01/3/1')" routerLinkActive="active " style=" color:White ">สร้างกระดาษทำการค่าปรับเปรียบเทียบคดี</a>
                     <a class="item " [routerLink]="[ '/int01/4/1'] " *ngIf="authService.renderByPage('int01/4/1')" routerLinkActive="active " style=" color:White ">ตรวจสอบเปรียบเทียบงบทดลองกับงบสรุปยอดเงินค่าภาษี</a>
