--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">สร้างกระดาษทำการ ภาษีสรรพสามิต</h2>
+        <h2 class="ui header">ตรวจสอบใบเสร็จรับเงินภาษีสรรพสามิต</h2>
 
         <div class="ui top attached header">
             <span> ข้อมูลกระดาษทำการภาษีสรรพสามิต</span>
@@ -10,50 +10,40 @@
         <div class="ui attached segment">
             <div class="ui form">
                 <div class="inline fields">
-                    <div class="four wide required field">
-                        <label class="custom-label-w-10">ประจำเดือน</label>
-                        <div class="ui icon input">
-                            <input type="text" placeholder="MM/YYYY" value="ตุลาคม 2560">
-                            <i class="add to calendar icon"></i>
-                        </div>
+                    <div class="two wide field"></div>
+                    <div class="two wide field">
+                        <label>สรรพสามิตภาค</label>
                     </div>
-                    <div class="six wide field required">
-                        <label class="custom-label-w-10">หน่วยรับตรวจ </label>
-                        <select class="ui dropdown ai" [ngModel]="selectedProduct" (ngModelChange)="onChange($event)">
-                            <option *ngFor="let item of productList; index as i;" value="{{item.value}}">{{item.value}}</option>
+                    <div class="four wide field">
+                        <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)">
+                            <option value="">เลือก</option>
+                            <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
                         </select>
                     </div>
-
-
-                    <div class="five wide field required">
-                        <label class="custom-label-w-20">ผู้ตรวจ</label>
-                        <input type="text" value="">
+                    <div class="two wide field">
+                        <label>สรรพสามิตพื้นที่</label>
+                    </div>
+                    <div class="four wide field">
+                        <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)">
+                            <option value="">เลือก</option>
+                            <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+                        </select>
                     </div>
                 </div>
-
-
                 <div class="inline fields">
-                    <div class="four wide required field">
-                        <label class="custom-label-w-10">วันที่ตรวจ</label>
-                        <div class="ui icon input">
-                            <input type="text" placeholder="DD/MM/YYYY" value="17 พฤษจิกายน 2560">
-                            <i class="add to calendar icon"></i>
-                        </div>
+                    <div class="two wide field"></div>
+                    <div class="two wide field">
+                        <label>สรพพสามิตสาขา</label>
                     </div>
-                    <div class="six wide field required">
-                        <label class="custom-label-w-10">Prefix ใบเสร็จ</label>
-                        <input type="text" value="C06010160/00">
-                    </div>
-
-                </div>
-
-                <div class="ui center aligned grid">
-                    <div class="eight wide column">
-                        <a class="ui mini primary button" routerLink='/int01/1/2'>
-                            <i class="add icon"></i>สร้างกระดาษทำการ</a>
+                    <div class="four wide field">
+                        <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3">
+                            <option value="">เลือก</option>
+                            <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+                        </select>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
