commit mouk int1/6,int1/7

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -47,8 +47,7 @@
                         <tr class="center aligned">
                             <th>ลำดับที่</th>
                             <th>วันที่ออกใบอนุญาต </th>
-                            <th>วันที่นำส่งเงิน
-                                <br>(ระบบรายได้)</th>
+                            <th>วันที่นำส่งเงิน <br>(ระบบรายได้)</th>
                             <th>ประเภทใบอนุญาต</th>
                             <th>เลขแบบพิมพ์</th>
                             <th>เลขที่ใบอนุญาต</th>
