--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-6/int01-6-1/int01-6-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-6/int01-6-1/int01-6-1.component.html
@@ -9,6 +9,7 @@
         <div class="ui attached segment">
             <div class="ui form">
                 <div class="inline fields">
+                    <div class="four wide field"></div>
                     <div class="eight wide field">
                         <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
                         <select name="selectZone" id="selectZone" class="ui dropdown ai">
@@ -18,6 +19,7 @@
                 </div>
 
                 <div class="inline fields">
+                    <div class="four wide field"></div>
                     <div class="eight wide field">
                         <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
                         <select name="selectArea" id="selectArea" class="ui dropdown ai">
@@ -27,8 +29,9 @@
                 </div>
 
                 <div class="inline fields">
+                    <div class="four wide field"></div>
                     <div class="eight wide field">
-                        <label class="custom-label-w-25">สำนัักงานสรรพสามิตพื้นที่สาขา</label>
+                        <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่สาขา</label>
                         <select name="selectSubArea" id="selectSubArea" class="ui dropdown ai">
                             <option *ngFor="let item of subAreaList; index as i;" value="{{i+1}}">{{item.value}}</option>
                         </select>
@@ -36,28 +39,35 @@
                 </div>
 
                 <div class="inline fields">
+                    <div class="four wide field"></div>
                     <div class="eight wide field">
-                        <label class="custom-label-w-25">ผู้ประกอบการ</label>
-                        <select name="selectCompany" id="selectCompany" class="ui dropdown ai">
-                            <option *ngFor="let item of companyList; index as i;" value="{{i+1}}">{{item.value}}</option>
+                        <label class="custom-label-w-25">สินค้าและบริการ</label>
+                        <select name="selectSubArea" id="selectSubArea" class="ui dropdown ai">
+                            <option *ngFor="let item of subAreaList; index as i;"></option>
                         </select>
                     </div>
                 </div>
 
                 <div class="inline fields">
-                    <div class="nine wide field">
-                        <label class="custom-label-w-20" style="margin-right: 5%;">วันที่</label>
-                        <div class="seven wide field">
-                            <div class="ui icon input">
-                                <input type="text" placeholder="MM/YYYY" value="09/2560">
-                                <i class="add to calendar icon"></i>
+                    <div class="four wide field"></div>
+                    <div class="two wide field ">
+                        <label class="custom-label-w-35">วันที่
+                        </label>
+                    </div>
+                    <div class="three wide field">
+                        <div class="ui calendar" id="calendar1" style="width:100%">
+                            <div class="ui input left icon">
+                                <i class="time icon"></i>
+                                <input type="text" name="endDate" id="endDate">
                             </div>
                         </div>
-                        <div class="eight wide field">
-                            <label>ถึง</label>
-                            <div class="ui icon input">
-                                <input type="text" placeholder="MM/YYYY" value="12/2560">
-                                <i class="add to calendar icon"></i>
+                    </div>
+                    <label>ถึง</label>
+                    <div class="three wide field">
+                        <div class="ui calendar" id="calendar2" style="width:100%">
+                            <div class="ui input left icon">
+                                <i class="time icon"></i>
+                                <input type="text" name="endDate" id="endDate">
                             </div>
                         </div>
                     </div>
@@ -79,8 +89,8 @@
         </div>
         <br>
 
-        <div class="ui grid">
-            <div class="ui segment" style="overflow-x: scroll;">
+        <div class="ui segment">
+            <div style="overflow-x: scroll;">
                 <table id="table1" class="ui small celled table">
                     <thead>
                         <tr style="text-align: center;">
