int01-[1-1,1-2,2-1] and int02-[2,3]

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -6,7 +6,7 @@
       <span>แบบสอบทานระบบการควบคุมภายใน</span>
     </div>
 
-    <div class="ui attached segment">
+    <div class="ui bottom attached segment">
       <form class="ui form" (submit)="onAdd($event)" ngNativeValidate>
         <div class="inline three fields">
           <div class="field">
