--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
@@ -1,49 +1,74 @@
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">ตรวจสอบใบเสร็จรับเงินภาษีสรรพสามิต</h2>
-
-        <div class="ui top attached header">
-            <span> ข้อมูลกระดาษทำการภาษีสรรพสามิต</span>
+        <div class="ui top text-center attached header">
+            <h3>ตรวจสอบใบเสร็จรับเงินภาษีสรรพสามิต</h3>
         </div>
-
-
-        <div class="ui attached segment">
-            <div class="ui form">
-                <div class="inline fields">
-                    <div class="two wide field"></div>
-                    <div class="two wide field">
-                        <label>สรรพสามิตภาค</label>
-                    </div>
-                    <div class="four wide field">
-                        <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)">
-                            <option value="">เลือก</option>
-                            <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
-                        </select>
-                    </div>
-                    <div class="two wide field">
-                        <label>สรรพสามิตพื้นที่</label>
-                    </div>
-                    <div class="four wide field">
-                        <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)">
-                            <option value="">เลือก</option>
-                            <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
-                        </select>
+        <div class="ui bottom attached segment">
+            <form class="ui sixteen wide grid" (submit)="search($event)">
+                <div class="sixteen wide column">
+                    <div class="ui form">
+                        <div class="inline fields">
+                            <div class="three wide field">
+                                <label class="text-right full-width">สรรพสามิตภาค</label>
+                            </div>
+                            <div class="five wide field">
+                                <select class="ui dropdown search selection" id="travelTo1" (change)="travelTo2Dropdown($event)">
+                                    <option value="">เลือก</option>
+                                    <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+                                </select>
+                            </div>
+                            <div class="two wide field">
+                                <label class="text-right full-width">สรรพสามิตพื้นที่</label>
+                            </div>
+                            <div class="five wide field">
+                                <select class="ui dropdown search selection" id="travelTo2" (change)="travelTo3Dropdown($event)">
+                                    <option value="">เลือก</option>
+                                    <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="inline fields">
+                            <div class="three wide field">
+                                <label class="text-right full-width">สรพพสามิตสาขา</label>
+                            </div>
+                            <div class="five wide field">
+                                <select class="ui dropdown search selection" id="travelTo3">
+                                    <option value="">เลือก</option>
+                                    <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+                                </select>
+                            </div>
+                            <div class="two wide field ">
+                                <label class="text-right full-width">วันที่</label>
+                            </div>
+                            <div class="two wide field">
+                                <div class="ui calendar full-width" id="calendar1">
+                                    <div class="ui input left icon">
+                                        <i class="calendar alternate icon"></i>
+                                        <input type="text" placeholder="วัน/เดือน/ปี" name="endDate" id="endDate">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="one wide field">
+                                <label class="text-center full-width">ถึง</label>
+                            </div>
+                            <div class="two wide field">
+                                <div class="ui calendar full-width" id="calendar2">
+                                    <div class="ui input left icon">
+                                        <i class="calendar alternate icon"></i>
+                                        <input type="text" placeholder="วัน/เดือน/ปี" name="endDate" id="endDate">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="inline fields">
-                    <div class="two wide field"></div>
-                    <div class="two wide field">
-                        <label>สรพพสามิตสาขา</label>
-                    </div>
-                    <div class="four wide field">
-                        <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3">
-                            <option value="">เลือก</option>
-                            <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
-                        </select>
-                    </div>
+                <div class="sixteen wide center aligned column">
+                    <button class="ui primary mini button" type="submit">
+                        <i class="search icon"></i>
+                        ค้นหา
+                    </button>
                 </div>
-            </div>
-
+            </form>
         </div>
     </div>
 </div>
