--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -6,7 +6,7 @@
       <span>แบบสอบทานระบบการควบคุมภายใน</span>
     </div>
 
-    <div class="ui attached segment">
+    <div class="ui bottom attached segment">
       <form class="ui form" (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="ui center aligned grid">
           <div class="column fourteen wide">
