--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <table id="dataTable" class="ui small celled table" style="width: 150%;">
+      <table id="dataTable" class="ui small celled table nowrap" style="width: 150%;">
         <thead>
           <tr>
             <th rowspan="2" style="text-align: center !important;">
@@ -97,7 +97,7 @@
       <br/>
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button" (click)="export()">
+          <button class="ui mini primary button" (click)="exportFollowUpProject()">
             <i class="upload icon"></i>
             Export
           </button>
