--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
@@ -98,7 +98,7 @@
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
           <button class="ui mini primary button" (click)="exportFollowUpProject()">
-            <i class="upload icon"></i>
+            <i class="print icon"></i>
             Export
           </button>
           <button class="ui mini primary button" (click)="deleteData()">
