--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
@@ -85,7 +85,7 @@
         </div>
 
       </div>
-      <table id="dataTable" class="ui small celled table" style="width: 150%;">
+      <table id="dataTable" class="ui small celled table nowrap" style="width: 150%;">
         <thead>
           <tr>
             <th rowspan="2" style="text-align: center !important;">
@@ -131,8 +131,8 @@
       <br/>
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button" (click)="export()">
-            <i class="upload icon"></i>
+          <button class="ui mini primary button" (click)="exportFollowUpDepartment()">
+            <i class="print icon"></i>
             Export
           </button>
           <button class="ui mini primary button" (click)="deleteData()">
