--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -69,7 +69,7 @@
                         <i class="dropdown icon "></i> ตรวจสอบแสตมป์
                         <div class="menu ">
                             <a class="item " [routerLink]="[ '/int05/1'] " *ngIf="authService.renderByPage('int05/1')" routerLinkActive="active ">ตรวจแสตมป์พื้นที่</a>
-                            <a class="item " [routerLink]="[ '/int05/2'] " *ngIf="authService.renderByPage('int05/2')" routerLinkActive="active ">ตรวจแสตมป์พื้นที่
+                            <a class="item " [routerLink]="[ '/int05/1/1'] " *ngIf="authService.renderByPage('int05/1/1')" routerLinkActive="active ">ตรวจแสตมป์พื้นที่
                                 สาขา </a>
                         </div>
                     </div>
