update  styles.css && code 08-2

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -51,7 +51,7 @@
 
 
       
-          <table id="dataTable"  class="ui small celled table" style="width: 100%;">
+          <table id="dataTable"  class="ui small celled table nowrap" style="width: 100%;">
             <thead>
               <tr>
                 <!-- <th style="text-align: center !important">#</th> -->
@@ -149,7 +149,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTableF1" class="ui small celled table" style="width: 100%;">
+          <table id="dataTableF1" class="ui small celled table nowrap" style="width: 140%;">
             <thead>
               <tr>
                 <th rowspan="2" style="text-align: center !important">ลำดับ</th>
@@ -260,7 +260,7 @@
   
   
           <div class="inline fields">
-            <table id="dataTableF2" class="ui small celled table" style="width: 100%;">
+            <table id="dataTableF2" class="ui small celled table nowrap" style="width: 100%;">
               <thead>
                   <tr>
                     <th  rowspan="2" style="text-align: center !important">ลำดับ</th>
@@ -274,8 +274,8 @@
                   </tr>
               </thead>
             </table>
-  
           </div>
+
           <div class="inline fields"></div>
           <div class="ui center aligned grid">
             <div class="sixteen wide column">
