update FontEnd int08-2-1

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -113,7 +113,7 @@
           <div class="ui form">
             <div class="inline fields">
               <div class="two wide field "></div>
-              <div class="two wide field ">
+              <div class="four wide field ">
                 <label>{{riskAssInfHdr.riskAssInfHdrName}}</label>
               </div>
               <div class="one wide field ">
@@ -130,7 +130,7 @@
               <div class="one wide field ">
                 <label>{{con.value2 == null ? '-' : con.value2 }}</label>
               </div>
-              <div class="one wide field ">
+              <div class="two wide field ">
                 <label>ระดับความเสี่ยง</label>
               </div>
               <div class="one wide field ">
@@ -224,7 +224,7 @@
             <div class="ui form">
               <div class="inline fields">
                 <div class="two wide field "></div>
-                <div class="two wide field ">
+                <div class="four wide field ">
                   <label>{{riskAssInfHdr.riskAssInfHdrName}}</label>
                 </div>
                 <div class="one wide field ">
@@ -241,7 +241,7 @@
                 <div class="one wide field ">
                   <label>{{con.value2 == null ? '-' : con.value2 }}</label>
                 </div>
-                <div class="one wide field ">
+                <div class="two wide field ">
                   <label>ระดับความเสี่ยง</label>
                 </div>
                 <div class="one wide field ">
@@ -324,7 +324,7 @@
               <div class="ui form">
                 <div class="inline fields">
                   <div class="two wide field "></div>
-                  <div class="two wide field ">
+                  <div class="four wide field ">
                     <label>ระบบสารสนเทศฯ ของกรมสรรพสามิต</label>
                   </div>
                   <div class="one wide field ">
@@ -341,7 +341,7 @@
                   <div class="one wide field ">
                     <label>{{con.value2 == null ? '-' : con.value2 }}</label>
                   </div>
-                  <div class="one wide field ">
+                  <div class="two wide field ">
                     <label>ระดับความเสี่ยง</label>
                   </div>
                   <div class="one wide field ">
